infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inducore-ingress
  namespace: inducore-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.inducore.io
        - portal.inducore.io
      secretName: inducore-tls-cert
  rules:
    - host: api.inducore.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inducore-gateway-svc
                port:
                  number: 3000
